[package]
name = "nuts-client"
version = "0.1.0"
edition = "2021"
description = "Tunnel client for nuts-tunnel — exposes local services through a remote proxy"
license = "MIT"

[[bin]]
name = "nuts-client"
path = "src/main.rs"

[dependencies]
nuts-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
url = "2"
toml = "0.8"
