[package]
name = "nuts-proxy"
version = "0.1.0"
edition = "2021"
description = "Cloud Run reverse-tunnel proxy for nuts-tunnel"
license = "MIT"

[[bin]]
name = "nuts-proxy"
path = "src/main.rs"

[dependencies]
nuts-protocol = { path = "../protocol" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
